--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.3.3
-pymongo==4.5.0
-python-dotenv==1.0.0
-requests==2.31.0
+Flask==3.1.1
+flask_cors==6.0.1
+pymongo==4.13.2
+python-dotenv==1.1.1
+Requests==2.32.4
